# VO_pipeline

./: README.md  environment.yml
Keypoint_Detection_and_Matching/: README.md  detect_corner.py
Mono_VO/: camera.py  main.py  pointmap.py  process_frame.py  visual_odometry.py
VO/: README.md  display.py  g2o_optimizer.py  main.py  mapp.py  plot_trajectory.py  process_frame.py  setup.py
g2o_examples/BA/: CMakeLists.txt  ba.cpp
g2o_examples/CurveFitting/: CMakeLists.txt  curvefitting.cpp
pangolin_example/: plot_trajectory.py
